--- a/index.html
+++ b/index.html
@@ -6,5 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h4>WebStudio</h4>
+      <p>Studio</p>
+      <p>Portfolio</p>
+      <p>Contacts</p>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <br />
+      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+    </div>
+    <div>
+      <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+      <p>Request our service</p>
+    </div>
+    <div>
+      <h3>ATTENTION TO DETAILS</h3>
+      <p>
+        We go into all the details and processes of your business to develop a
+        customized solution.
+      </p>
+      <h3>PUNCTUALITY</h3>
+      <p>
+        With us, you can feel safe and secure. An important principle of the
+        company: respect your time and respect the agreed deadlines.
+      </p>
+      <h3>PLANNING</h3>
+      <p>
+        You will be able to observe and participate in every phase of solution
+        development and implementation.
+      </p>
+      <h3>modern technologies</h3>
+      <p>
+        We use innovative tools to solve assigned tasks. It's time to simplify
+        work processes.
+      </p>
+    </div>
+    <div>
+      <h2>What we do</h2>
+      <img src="images\gr1.jpg" width="370" height="294" />
+      <img src="images\gr2.jpg" width="370" height="294" />
+      <img src="images\gr3.jpg" width="370" height="294" />
+    </div>
+    <div>
+      <h2>our team</h2>
+      <img src="images\Christopher Walker.jpg" width="270" height="260" />
+      <p>Christopher Walker</p>
+      <p>Product Designer</p>
+      <img src="images\Kylie Evans.jpg" width="270" height="260" />
+      <p>Kylie Evans</p>
+      <p>Frontend Developer</p>
+      <img src="images\Ryan Harris.jpg" width="270" height="260" />
+      <p>Ryan Harris</p>
+      <p>Marketing</p>
+      <img src="images\Tyler Moore.jpg" width="270" height="260" />
+      <p>Tyler Moore</p>
+      <p>UI Designer</p>
+    </div>
+    <div>
+      <h4>WebStudio</h4>
+      <p>
+        695 Park Ave, New York, NY 10065,<br />
+        United States
+      </p>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+    </div>
+  </body>
 </html>
