--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   </head>
   <body>
     <div>
-      <h4>WebStudio</h4>
-      <p>Studio</p>
-      <p>Portfolio</p>
-      <p>Contacts</p>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <br />
-      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      <header>
+        <h4>WebStudio</h4>
+        <p>Studio</p>
+        <p>Portfolio</p>
+        <p>Contacts</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <br />
+        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      </header>
     </div>
     <div>
       <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-      <p>Request our service</p>
+      <button type="button">Request our service</button>
     </div>
     <div>
       <h3>ATTENTION TO DETAILS</h3>
@@ -44,33 +46,43 @@
     </div>
     <div>
       <h2>What we do</h2>
-      <img src="images\gr1.jpg" width="370" height="294" />
-      <img src="images\gr2.jpg" width="370" height="294" />
-      <img src="images\gr3.jpg" width="370" height="294" />
+      <img src="images\gr1.jpg" alt="working_place1" width="370" height="294" />
+      <img src="images\gr2.jpg" alt="working_place2" width="370" height="294" />
+      <img src="images\gr3.jpg" alt="working_place3" width="370" height="294" />
     </div>
     <div>
       <h2>our team</h2>
       <img src="images\Christopher Walker.jpg" width="270" height="260" />
-      <p>Christopher Walker</p>
-      <p>Product Designer</p>
+      <footer>
+        <p>Christopher Walker</p>
+        <p>Product Designer</p>
+      </footer>
       <img src="images\Kylie Evans.jpg" width="270" height="260" />
-      <p>Kylie Evans</p>
-      <p>Frontend Developer</p>
+      <footer>
+        <p>Kylie Evans</p>
+        <p>Frontend Developer</p>
+      </footer>
       <img src="images\Ryan Harris.jpg" width="270" height="260" />
-      <p>Ryan Harris</p>
-      <p>Marketing</p>
+      <footer>
+        <p>Ryan Harris</p>
+        <p>Marketing</p>
+      </footer>
       <img src="images\Tyler Moore.jpg" width="270" height="260" />
-      <p>Tyler Moore</p>
-      <p>UI Designer</p>
+      <footer>
+        <p>Tyler Moore</p>
+        <p>UI Designer</p>
+      </footer>
     </div>
     <div>
-      <h4>WebStudio</h4>
-      <p>
-        695 Park Ave, New York, NY 10065,<br />
-        United States
-      </p>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      <address>
+        <h4>WebStudio</h4>
+        <p>
+          695 Park Ave, New York, NY 10065,<br />
+          United States
+        </p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      </address>
     </div>
   </body>
 </html>
