--- a/index.html
+++ b/index.html
@@ -7,71 +7,70 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <header>
-        <h4>WebStudio</h4>
-        <p>Studio</p>
-        <p>Portfolio</p>
-        <p>Contacts</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <br />
-        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
-      </header>
-    </div>
-    <div>
-      <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-      <button type="button">Request our service</button>
-    </div>
-    <div>
-      <h3>ATTENTION TO DETAILS</h3>
-      <p>
-        We go into all the details and processes of your business to develop a
-        customized solution.
-      </p>
-      <h3>PUNCTUALITY</h3>
-      <p>
-        With us, you can feel safe and secure. An important principle of the
-        company: respect your time and respect the agreed deadlines.
-      </p>
-      <h3>PLANNING</h3>
-      <p>
-        You will be able to observe and participate in every phase of solution
-        development and implementation.
-      </p>
-      <h3>modern technologies</h3>
-      <p>
-        We use innovative tools to solve assigned tasks. It's time to simplify
-        work processes.
-      </p>
-    </div>
-    <div>
-      <h2>What we do</h2>
-      <img src="images\gr1.jpg" alt="working_place1" width="370" height="294" />
-      <img src="images\gr2.jpg" alt="working_place2" width="370" height="294" />
-      <img src="images\gr3.jpg" alt="working_place3" width="370" height="294" />
-    </div>
+    <header>
+      <h4>WebStudio</h4>
+      <p>Studio</p>
+      <p>Portfolio</p>
+      <p>Contacts</p>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <br />
+      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+    </header>
+    <footer>
+      <div>
+        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button type="button">Request our service</button>
+      </div>
+      <div>
+        <h3>ATTENTION TO DETAILS</h3>
+        <p>
+          We go into all the details and processes of your business to develop a
+          customized solution.
+        </p>
+        <h3>PUNCTUALITY</h3>
+        <p>
+          With us, you can feel safe and secure. An important principle of the
+          company: respect your time and respect the agreed deadlines.
+        </p>
+        <h3>PLANNING</h3>
+        <p>
+          You will be able to observe and participate in every phase of solution
+          development and implementation.
+        </p>
+        <h3>modern technologies</h3>
+        <p>
+          We use innovative tools to solve assigned tasks. It's time to simplify
+          work processes.
+        </p>
+      </div>
+      <div>
+        <h2>What we do</h2>
+        <img
+          src="images\gr1.jpg"
+          alt="working_place1"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images\gr2.jpg"
+          alt="working_place2"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images\gr3.jpg"
+          alt="working_place3"
+          width="370"
+          height="294"
+        />
+      </div>
+    
     <div>
       <h2>our team</h2>
-      <img src="images\Christopher Walker.jpg" width="270" height="260" />
-      <footer>
-        <p>Christopher Walker</p>
-        <p>Product Designer</p>
-      </footer>
-      <img src="images\Kylie Evans.jpg" width="270" height="260" />
-      <footer>
-        <p>Kylie Evans</p>
-        <p>Frontend Developer</p>
-      </footer>
-      <img src="images\Ryan Harris.jpg" width="270" height="260" />
-      <footer>
-        <p>Ryan Harris</p>
-        <p>Marketing</p>
-      </footer>
-      <img src="images\Tyler Moore.jpg" width="270" height="260" />
-      <footer>
-        <p>Tyler Moore</p>
-        <p>UI Designer</p>
-      </footer>
+      <img src="images\Christopher Walker.jpg" width="270" height="260" /><figcaption>Christopher Walker<br>Product Designer</figcaption>
+      <img src="images\Kylie Evans.jpg" width="270" height="260" /><figcaption>Kylie Evans<br>Frontend Developer</figcaption>
+      <img src="images\Ryan Harris.jpg" width="270" height="260" /> <figcaption>Ryan Harris<br>Marketing</figcaption>
+      <img src="images\Tyler Moore.jpg" width="270" height="260" /><figcaption>Tyler Moore<br>UI Designer</figcaption>
     </div>
     <div>
       <address>
