--- a/index.html
+++ b/index.html
@@ -64,24 +64,29 @@
           height="294"
         />
       </div>
-    
-    <div>
-      <h2>our team</h2>
-      <img src="images\Christopher Walker.jpg" width="270" height="260" /><figcaption>Christopher Walker<br>Product Designer</figcaption>
-      <img src="images\Kylie Evans.jpg" width="270" height="260" /><figcaption>Kylie Evans<br>Frontend Developer</figcaption>
-      <img src="images\Ryan Harris.jpg" width="270" height="260" /> <figcaption>Ryan Harris<br>Marketing</figcaption>
-      <img src="images\Tyler Moore.jpg" width="270" height="260" /><figcaption>Tyler Moore<br>UI Designer</figcaption>
-    </div>
-    <div>
-      <address>
-        <h4>WebStudio</h4>
-        <p>
-          695 Park Ave, New York, NY 10065,<br />
-          United States
-        </p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
-      </address>
-    </div>
+
+      <div>
+        <h2>our team</h2>
+        <img src="images\Christopher Walker.jpg" width="270" height="260" />
+        <figcaption>Christopher Walker<br />Product Designer</figcaption>
+        <img src="images\Kylie Evans.jpg" width="270" height="260" />
+        <figcaption>Kylie Evans<br />Frontend Developer</figcaption>
+        <img src="images\Ryan Harris.jpg" width="270" height="260" />
+        <figcaption>Ryan Harris<br />Marketing</figcaption>
+        <img src="images\Tyler Moore.jpg" width="270" height="260" />
+        <figcaption>Tyler Moore<br />UI Designer</figcaption>
+      </div>
+      <div>
+        <address>
+          <h4>WebStudio</h4>
+          <p>
+            695 Park Ave, New York, NY 10065,<br />
+            United States
+          </p>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+        </address>
+      </div>
+    </footer>
   </body>
 </html>
