--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <!--<nav> Przyda sie podczas tworzenia następnych stron. -->
       <h4>WebStudio</h4>
       <p>Studio</p>
       <p>Portfolio</p>
@@ -15,6 +16,7 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <br />
       <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
     </header>
     <footer>
       <div>
@@ -66,7 +68,7 @@
       </div>
 
       <div>
-        <h2>our team</h2>
+        <h2>Our Team</h2>
         <img src="images\Christopher Walker.jpg" width="270" height="260" />
         <figcaption>Christopher Walker<br />Product Designer</figcaption>
         <img src="images\Kylie Evans.jpg" width="270" height="260" />
