--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Contacts</p>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <br />
-      <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+      <a href="tel:+1212-772-4150">+1 212-772-4150</a>
       <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
     </header>
     <footer>
@@ -48,36 +48,61 @@
       <div>
         <h2>What we do</h2>
         <img
-          src="images\gr1.jpg"
+          src="images/gr1.jpg"
           alt="working_place1"
           width="370"
           height="294"
         />
         <img
-          src="images\gr2.jpg"
+          src="images/gr2.jpg"
           alt="working_place2"
           width="370"
           height="294"
         />
         <img
-          src="images\gr3.jpg"
+          src="images/gr3.jpg"
           alt="working_place3"
           width="370"
           height="294"
         />
       </div>
-
-      <div>
+      <figure>
         <h2>Our Team</h2>
-        <img src="images\Christopher Walker.jpg" width="270" height="260" />
+        <img
+          src="images/Christopher_Walker.jpg"
+          alt="Christopher_Walker"
+          width="270"
+          height="260"
+        />
         <figcaption>Christopher Walker<br />Product Designer</figcaption>
-        <img src="images\Kylie Evans.jpg" width="270" height="260" />
+      </figure>
+      <figure>
+        <img
+          src="images/Kylie_Evans.jpg"
+          alt="Kylie_Evans"
+          width="270"
+          height="260"
+        />
         <figcaption>Kylie Evans<br />Frontend Developer</figcaption>
-        <img src="images\Ryan Harris.jpg" width="270" height="260" />
+      </figure>
+      <figure>
+        <img
+          src="images/Ryan_Harris.jpg"
+          alt="Ryan_Harris"
+          width="270"
+          height="260"
+        />
         <figcaption>Ryan Harris<br />Marketing</figcaption>
-        <img src="images\Tyler Moore.jpg" width="270" height="260" />
+      </figure>
+      <figure>
+        <img
+          src="images/Tyler_Moore.jpg"
+          alt="Tyler_Moore"
+          width="270"
+          height="260"
+        />
         <figcaption>Tyler Moore<br />UI Designer</figcaption>
-      </div>
+      </figure>
       <div>
         <address>
           <h4>WebStudio</h4>
@@ -86,7 +111,7 @@
             United States
           </p>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+          <a href="tel:+1212-772-4150">+1 212-772-4150</a>
         </address>
       </div>
     </footer>
