--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <!--<nav> Przyda sie podczas tworzenia następnych stron. -->
-      <h4>WebStudio</h4>
+      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
+        >WebStudio</a
+      >
       <p>Studio</p>
       <p>Portfolio</p>
       <p>Contacts</p>
@@ -103,15 +105,17 @@
         />
         <figcaption>Tyler Moore<br />UI Designer</figcaption>
       </figure>
-      <div>
-        <h4>WebStudio</h4>
+      <address>
+        <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
+          >WebStudio</a
+        >
         <p>
           695 Park Ave, New York, NY 10065,<br />
           United States
         </p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-      </div>
+      </address>
     </footer>
   </body>
 </html>
