--- a/index.html
+++ b/index.html
@@ -14,39 +14,39 @@
       >
       <p>Studio</p>
       <p>Portfolio</p>
+      <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
       <p>Contacts</p>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <br />
       <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-      <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
     </header>
     <footer>
       <div>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button">Request our service</button>
       </div>
-      <div>
-        <h3>ATTENTION TO DETAILS</h3>
-        <p>
+      <dl>
+        <dt>ATTENTION TO DETAILS</dt>
+        <dd>
           We go into all the details and processes of your business to develop a
           customized solution.
-        </p>
-        <h3>PUNCTUALITY</h3>
-        <p>
+        </dd>
+        <dt>PUNCTUALITY</dt>
+        <dd>
           With us, you can feel safe and secure. An important principle of the
           company: respect your time and respect the agreed deadlines.
-        </p>
-        <h3>PLANNING</h3>
-        <p>
+        </dd>
+        <dt>PLANNING</dt>
+        <dd>
           You will be able to observe and participate in every phase of solution
           development and implementation.
-        </p>
-        <h3>modern technologies</h3>
-        <p>
+        </dd>
+        <dt>modern technologies</dt>
+        <dd>
           We use innovative tools to solve assigned tasks. It's time to simplify
           work processes.
-        </p>
-      </div>
+        </dd>
+      </dl>
       <div>
         <h2>What we do</h2>
         <img
