--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
-  </head>
-  <body>
     <header>
       <!--<nav> Przyda sie podczas tworzenia następnych stron. -->
       <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
         >WebStudio</a
       >
-      <p>Studio</p>
-      <p>Portfolio</p>
+      <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
+      <a href="http://DODAJ_STUDIO">Studio</a>
+      <a href="http://DODAJ_PORTFOLIO.com">Portfolio</a>
+      <a href="http://DODAJ_CONTACTS.com">Contacts</a>
       <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
-      <p>Contacts</p>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <br />
       <a href="tel:+1212-772-4150">+1 212-772-4150</a>
     </header>
     <footer>
