--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+  </head>
+  <body>
     <header>
       <!--<nav> Przyda sie podczas tworzenia następnych stron. -->
       <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
@@ -103,15 +105,17 @@
         />
         <figcaption>Tyler Moore<br />UI Designer</figcaption>
       </figure>
+
+      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
+        >WebStudio</a
+      >
       <address>
-        <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
-          >WebStudio</a
-        >
         <p>
           695 Park Ave, New York, NY 10065,<br />
           United States
         </p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <br />
         <a href="tel:+1212-772-4150">+1 212-772-4150</a>
       </address>
     </footer>
