--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+1212-772-4150">+1 212-772-4150</a>
     </header>
-    <footer>
+    <main>
       <div>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button">Request our service</button>
@@ -68,43 +68,45 @@
           height="294"
         />
       </div>
-      <figure>
-        <h2>Our Team</h2>
-        <img
-          src="images/Christopher_Walker.jpg"
-          alt="Christopher_Walker"
-          width="270"
-          height="260"
-        />
-        <figcaption>Christopher Walker<br />Product Designer</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="images/Kylie_Evans.jpg"
-          alt="Kylie_Evans"
-          width="270"
-          height="260"
-        />
-        <figcaption>Kylie Evans<br />Frontend Developer</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="images/Ryan_Harris.jpg"
-          alt="Ryan_Harris"
-          width="270"
-          height="260"
-        />
-        <figcaption>Ryan Harris<br />Marketing</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="images/Tyler_Moore.jpg"
-          alt="Tyler_Moore"
-          width="270"
-          height="260"
-        />
-        <figcaption>Tyler Moore<br />UI Designer</figcaption>
-      </figure>
+      <footer>
+        <figure>
+          <h2>Our Team</h2>
+          <img
+            src="images/Christopher_Walker.jpg"
+            alt="Christopher_Walker"
+            width="270"
+            height="260"
+          />
+          <figcaption>Christopher Walker<br />Product Designer</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="images/Kylie_Evans.jpg"
+            alt="Kylie_Evans"
+            width="270"
+            height="260"
+          />
+          <figcaption>Kylie Evans<br />Frontend Developer</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="images/Ryan_Harris.jpg"
+            alt="Ryan_Harris"
+            width="270"
+            height="260"
+          />
+          <figcaption>Ryan Harris<br />Marketing</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="images/Tyler_Moore.jpg"
+            alt="Tyler_Moore"
+            width="270"
+            height="260"
+          />
+          <figcaption>Tyler Moore<br />UI Designer</figcaption>
+        </figure>
+      </footer>
 
       <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
         >WebStudio</a
@@ -118,6 +120,6 @@
         <br />
         <a href="tel:+1212-772-4150">+1 212-772-4150</a>
       </address>
-    </footer>
+    </main>
   </body>
 </html>
