--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   </head>
   <body>
     <header>
-      <!--<nav> Przyda sie podczas tworzenia następnych stron. -->
-      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
-        >WebStudio</a
-      >
-      <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
-      <a href="http://DODAJ_STUDIO">Studio</a>
-      <a href="http://DODAJ_PORTFOLIO.com">Portfolio</a>
-      <a href="http://DODAJ_CONTACTS.com">Contacts</a>
-      <!--</nav> Przyda sie podczas tworzenia następnych stron. -->
+      <nav>
+        <a href="#">WebStudio</a>
+        <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
+        <a href="#">Studio</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contacts</a>
+      </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+1212-772-4150">+1 212-772-4150</a>
     </header>
@@ -25,29 +23,29 @@
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button">Request our service</button>
       </div>
-      <dl>
-        <dt>ATTENTION TO DETAILS</dt>
-        <dd>
+      <article>
+        <h3>ATTENTION TO DETAILS</h3>
+        <p>
           We go into all the details and processes of your business to develop a
           customized solution.
-        </dd>
-        <dt>PUNCTUALITY</dt>
-        <dd>
+        </p>
+        <h3>PUNCTUALITY</h3>
+        <p>
           With us, you can feel safe and secure. An important principle of the
           company: respect your time and respect the agreed deadlines.
-        </dd>
-        <dt>PLANNING</dt>
-        <dd>
+        </p>
+        <h3>PLANNING</h3>
+        <p>
           You will be able to observe and participate in every phase of solution
           development and implementation.
-        </dd>
-        <dt>modern technologies</dt>
-        <dd>
+        </p>
+        <h3>modern technologies</h3>
+        <p>
           We use innovative tools to solve assigned tasks. It's time to simplify
           work processes.
-        </dd>
-      </dl>
-      <div>
+        </p>
+      </article>
+      <article>
         <h2>What we do</h2>
         <img
           src="images/gr1.jpg"
@@ -67,8 +65,8 @@
           width="370"
           height="294"
         />
-      </div>
-      <footer>
+      </article>
+      <article>
         <figure>
           <h2>Our Team</h2>
           <img
@@ -106,8 +104,9 @@
           />
           <figcaption>Tyler Moore<br />UI Designer</figcaption>
         </figure>
-      </footer>
-
+      </article>
+    </main>
+    <footer>
       <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
         >WebStudio</a
       >
@@ -120,6 +119,6 @@
         <br />
         <a href="tel:+1212-772-4150">+1 212-772-4150</a>
       </address>
-    </main>
+    </footer>
   </body>
 </html>
