--- a/index.html
+++ b/index.html
@@ -7,71 +7,87 @@
     <title>goit-markup-hw-01</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#">WebStudio</a>
-        <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
-        <a href="#">Studio</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contacts</a>
-      </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-    </header>
-    <main>
+    <section>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#">WebStudio</a></li>
+            <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
+            <li><a href="#">Studio</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+        </ul>
+      </header>
       <div>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button">Request our service</button>
       </div>
-      <article>
-        <h3>ATTENTION TO DETAILS</h3>
-        <p>
-          We go into all the details and processes of your business to develop a
-          customized solution.
-        </p>
-        <h3>PUNCTUALITY</h3>
-        <p>
-          With us, you can feel safe and secure. An important principle of the
-          company: respect your time and respect the agreed deadlines.
-        </p>
-        <h3>PLANNING</h3>
-        <p>
-          You will be able to observe and participate in every phase of solution
-          development and implementation.
-        </p>
-        <h3>modern technologies</h3>
-        <p>
-          We use innovative tools to solve assigned tasks. It's time to simplify
-          work processes.
-        </p>
-      </article>
-      <article>
+    </section>
+    <main>
+      <section>
+        <ul>
+          <li>
+            <h3>ATTENTION TO DETAILS</h3>
+            <p>
+              We go into all the details and processes of your business to
+              develop a customized solution.
+            </p>
+          </li>
+          <li>
+            <h3>PUNCTUALITY</h3>
+            <p>
+              With us, you can feel safe and secure. An important principle of
+              the company: respect your time and respect the agreed deadlines.
+            </p>
+          </li>
+          <li>
+            <h3>PLANNING</h3>
+            <p>
+              You will be able to observe and participate in every phase of
+              solution development and implementation.
+            </p>
+          </li>
+          <li>
+            <h3>modern technologies</h3>
+            <p>
+              We use innovative tools to solve assigned tasks. It's time to
+              simplify work processes.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>What we do</h2>
         <img
           src="images/gr1.jpg"
-          alt="working_place1"
+          alt="working place1"
           width="370"
           height="294"
         />
         <img
           src="images/gr2.jpg"
-          alt="working_place2"
+          alt="working place2"
           width="370"
           height="294"
         />
         <img
           src="images/gr3.jpg"
-          alt="working_place3"
+          alt="working place3"
           width="370"
           height="294"
         />
-      </article>
-      <article>
+      </section>
+      <section>
+        <h2>Our Team</h2>
         <figure>
-          <h2>Our Team</h2>
           <img
             src="images/Christopher_Walker.jpg"
-            alt="Christopher_Walker"
+            alt="Christopher Walker"
             width="270"
             height="260"
           />
@@ -80,7 +96,7 @@
         <figure>
           <img
             src="images/Kylie_Evans.jpg"
-            alt="Kylie_Evans"
+            alt="Kylie Evans"
             width="270"
             height="260"
           />
@@ -89,7 +105,7 @@
         <figure>
           <img
             src="images/Ryan_Harris.jpg"
-            alt="Ryan_Harris"
+            alt="Ryan Harris"
             width="270"
             height="260"
           />
@@ -98,26 +114,28 @@
         <figure>
           <img
             src="images/Tyler_Moore.jpg"
-            alt="Tyler_Moore"
+            alt="Tyler Moore"
             width="270"
             height="260"
           />
           <figcaption>Tyler Moore<br />UI Designer</figcaption>
         </figure>
-      </article>
+      </section>
     </main>
     <footer>
       <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
         >WebStudio</a
       >
       <address>
-        <p>
-          695 Park Ave, New York, NY 10065,<br />
-          United States
-        </p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <br />
-        <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+        <ul>
+          <li>695 Park Ave, New York, NY 10065, United States</li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
