--- a/index.html
+++ b/index.html
@@ -4,28 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
+    <link href="css/styles.css" rel="stylesheet " />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <ul>
-          <li><a href="#">WebStudio</a></li>
+        <ul class="u-list">
+          <li><a href="#" class="logo">WebStudio</a></li>
           <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="#" class="link-hover">Studio</a></li>
+          <li><a href="portfolio.html" class="link-hover">Portfolio</a></li>
+          <li><a href="#" class="link-hover">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+      <ul class="u-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link-hover"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+1212-772-4150" class="link-hover">+1 212-772-4150</a>
+        </li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="section-1">
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">Request our service</button>
+        <button type="button" class="button-1">Request our service</button>
       </section>
 
       <section>
