--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
     />
   </head>
   <body>
-    <header>
+    <header class="nav-inline">
       <nav>
         <ul class="u-list">
           <li><a href="#" class="logo">WebStudio</a></li>
           <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
           <li><a href="#" class="link-hover">Studio</a></li>
-          <li><a href="portfolio.html" class="link-hover">Portfolio</a></li>
+          <li class="port-display">
+            <a href="portfolio.html" class="link-hover">Portfolio</a>
+          </li>
           <li><a href="#" class="link-hover">Contacts</a></li>
         </ul>
       </nav>
       <ul class="u-list">
-        <li>
+        <li class="email-display">
           <a href="mailto:info@devstudio.com" class="link-hover"
             >info@devstudio.com</a
           >
@@ -42,13 +44,13 @@
       </ul>
     </header>
     <main>
-      <section class="section-1">
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+      <section class="section-1" class="nav-inline">
+        <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
         <button type="button" class="button-1">Request our service</button>
       </section>
 
-      <section>
-        <ul>
+      <section class="dis" class="font-1">
+        <ul class="box-1">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
