--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
         <button type="button" class="button-1">Request our service</button>
       </section>
 
-      <section class="dis" class="font-1">
-        <ul class="box-1">
+      <section
+        class="dis"
+        class="font-head"
+        class="font-par"
+        class="padding-test"
+      >
+        <ul class="box-one">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
