--- a/index.html
+++ b/index.html
@@ -49,13 +49,8 @@
         <button type="button" class="button-1">Request our service</button>
       </section>
 
-      <section
-        class="dis"
-        class="font-head"
-        class="font-par"
-        class="padding-test"
-      >
-        <ul class="box-one">
+      <section class="font-head" class="font-par">
+        <ul class="grid-box">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
