--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
 
       <section class="font-head" class="font-par">
-        <ul class="grid-box">
+        <ul class="grid-box" class="padding-section">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
@@ -82,71 +82,89 @@
         </ul>
       </section>
       <section>
-        <h2>What we do</h2>
-        <img
-          src="images/gr1.jpg"
-          alt="working place1"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/gr2.jpg"
-          alt="working place2"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/gr3.jpg"
-          alt="working place3"
-          width="370"
-          height="294"
-        />
+        <h2 class="head-2">What we do</h2>
+        <div class="grid-box-wwd" class="pading-section">
+          <img
+            src="images/gr1.jpg"
+            alt="working place1"
+            width="370"
+            height="294"
+          />
+          <img
+            src="images/gr2.jpg"
+            alt="working place2"
+            width="370"
+            height="294"
+          />
+          <img
+            src="images/gr3.jpg"
+            alt="working place3"
+            width="370"
+            height="294"
+          />
+        </div>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <figure>
-          <img
-            src="images/Christopher_Walker.jpg"
-            alt="Christopher Walker"
-            width="270"
-            height="260"
-          />
-          <figcaption>Christopher Walker<br />Product Designer</figcaption>
-        </figure>
-        <figure>
-          <img
-            src="images/Kylie_Evans.jpg"
-            alt="Kylie Evans"
-            width="270"
-            height="260"
-          />
-          <figcaption>Kylie Evans<br />Frontend Developer</figcaption>
-        </figure>
-        <figure>
-          <img
-            src="images/Ryan_Harris.jpg"
-            alt="Ryan Harris"
-            width="270"
-            height="260"
-          />
-          <figcaption>Ryan Harris<br />Marketing</figcaption>
-        </figure>
-        <figure>
-          <img
-            src="images/Tyler_Moore.jpg"
-            alt="Tyler Moore"
-            width="270"
-            height="260"
-          />
-          <figcaption>Tyler Moore<br />UI Designer</figcaption>
-        </figure>
+      <section class="section-2">
+        <h2 class="head-2">Our Team</h2>
+        <div class="grid-team">
+          <figure class="white-box" class="figacaption-to-delete">
+            <img
+              src="images/Christopher_Walker.jpg"
+              alt="Christopher Walker"
+              width="270"
+              height="260"
+            />
+            <figcaption class="kutas">
+              Christopher Walker
+              <div class="second-font">Product Designer</div>
+            </figcaption>
+          </figure>
+          <figure class="white-box">
+            <img
+              src="images/Kylie_Evans.jpg"
+              alt="Kylie Evans"
+              width="270"
+              height="260"
+            />
+            <figcaption>
+              Kylie Evans
+              <div class="second-font">Frontend Developer</div>
+            </figcaption>
+          </figure>
+          <figure class="white-box">
+            <img
+              src="images/Ryan_Harris.jpg"
+              alt="Ryan Harris"
+              width="270"
+              height="260"
+            />
+            <figcaption>
+              Ryan Harris
+              <div class="second-font">Marketing</div>
+            </figcaption>
+          </figure>
+          <figure class="white-box">
+            <img
+              src="images/Tyler_Moore.jpg"
+              alt="Tyler Moore"
+              width="270"
+              height="260"
+            />
+            <figcaption>
+              Tyler Moore
+              <div class="second-font">UI Designer</div>
+            </figcaption>
+          </figure>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
+      <a
+        href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
+        class="logo"
         >WebStudio</a
       >
-      <address>
+      <address class="line">
         <ul>
           <li>695 Park Ave, New York, NY 10065, United States</li>
           <li>
