--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     />
   </head>
   <body>
-    <header class="nav-block">
+    <header class="nav-block nav-style">
       <nav>
-        <ul class="nav-style">
+        <ul>
           <!--spróbuj przenieść klase do header-->
           <li>
             <a href="#"><l>WebStudio</l></a>
@@ -34,7 +34,7 @@
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
-      <ul class="nav-style">
+      <ul>
         <!--spróbuj przenieść klase do header-->
         <li>
           <a href="mailto:info@devstudio.com" class="hover"
@@ -111,49 +111,28 @@
         <h2>Our Team</h2>
         <div class="grid-team">
           <figure class="white-box">
-            <img
-              class="item-"
-              src="images/Christopher_Walker.jpg"
-              alt="Christopher Walker"
-              width="270"
-              height="260"
-            />
+            <img src="images/Christopher_Walker.jpg" alt="Christopher Walker" />
             <figcaption>
               Christopher Walker
               <div>Product Designer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img
-              src="images/Kylie_Evans.jpg"
-              alt="Kylie Evans"
-              width="270"
-              height="260"
-            />
+            <img src="images/Kylie_Evans.jpg" alt="Kylie Evans" />
             <figcaption>
               Kylie Evans
               <div>Frontend Developer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img
-              src="images/Ryan_Harris.jpg"
-              alt="Ryan Harris"
-              width="270"
-              height="260"
-            />
+            <img src="images/Ryan_Harris.jpg" alt="Ryan Harris" />
             <figcaption>
               Ryan Harris
               <div>Marketing</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img
-              src="images/Tyler_Moore.jpg"
-              alt="Tyler Moore"
-              width="270"
-              height="260"
-            />
+            <img src="images/Tyler_Moore.jpg" alt="Tyler Moore" />
             <figcaption>
               Tyler Moore
               <div>UI Designer</div>
