--- a/index.html
+++ b/index.html
@@ -23,26 +23,24 @@
     <header class="nav-block nav-style">
       <nav>
         <ul>
-          <!--spróbuj przenieść klase do header-->
           <li>
             <a href="#"><l>WebStudio</l></a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
           <li>
-            <a href="portfolio.html" class="hover">Portfolio</a>
+            <a href="portfolio.html" class="hover"><o>Portfolio</o></a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
       <ul>
-        <!--spróbuj przenieść klase do header-->
         <li>
           <a href="mailto:info@devstudio.com" class="hover"
-            >info@devstudio.com</a
+            ><m>info@devstudio.com</m></a
           >
         </li>
         <li>
-          <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
+          <a href="tel:+1212-772-4150"><t>+1 212-772-4150</t></a>
         </li>
       </ul>
     </header>
@@ -87,7 +85,6 @@
         <h2>What we do</h2>
         <div class="grid-box-v2">
           <img
-            class="item-a"
             src="images/gr1.jpg"
             alt="working place1"
             width="370"
@@ -141,13 +138,18 @@
         </div>
       </section>
     </main>
-    <footer>
-      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
-        >WebStudio</a
-      >
+    <footer class="address-style">
+      <ul>
+        <li>
+          <a href="#"><l>WebStudio</l></a>
+        </li>
+      </ul>
       <address>
-        <ul>
-          <li>695 Park Ave, New York, NY 10065, United States</li>
+        <ul class="a-style">
+          <li>
+            695 Park Ave, New York, NY 10065,<br />
+            United States
+          </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
