--- a/index.html
+++ b/index.html
@@ -104,33 +104,33 @@
           />
         </div>
       </section>
-      <section class="section-2">
+      <section class="section-2 img-size">
         <h2>Our Team</h2>
-        <div class="grid-team">
+        <div class="grid-team font-style-3">
           <figure class="white-box">
             <img src="images/Christopher_Walker.jpg" alt="Christopher Walker" />
-            <figcaption>
+            <figcaption class="font-style-1">
               Christopher Walker
               <div>Product Designer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/Kylie_Evans.jpg" alt="Kylie Evans" />
-            <figcaption>
+            <figcaption class="font-style-1">
               Kylie Evans
               <div>Frontend Developer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/Ryan_Harris.jpg" alt="Ryan Harris" />
-            <figcaption>
+            <figcaption class="font-style-1">
               Ryan Harris
               <div>Marketing</div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/Tyler_Moore.jpg" alt="Tyler Moore" />
-            <figcaption>
+            <figcaption class="font-style-1">
               Tyler Moore
               <div>UI Designer</div>
             </figcaption>
