--- a/portfolio.html
+++ b/portfolio.html
@@ -20,150 +20,184 @@
     />
   </head>
   <body>
-    <header class="nav-inline">
+    <header class="nav-block nav-style">
       <nav>
-        <ul class="u-list">
-          <li><a href="index.html" class="logo">WebStudio</a></li>
-          <!--pamiętaj o zmianie adresów url do studio, portfolio oraz contacts-->
-          <li><a href="#" class="link-hover">Studio</a></li>
-          <li class="port-display">
-            <a href="portfolio.html" class="link-hover">Portfolio</a>
+        <ul>
+          <li>
+            <a href="index.html"><l>WebStudio</l></a>
           </li>
-          <li><a href="#" class="link-hover">Contacts</a></li>
+          <li><a href="#" class="hover">Studio</a></li>
+          <li>
+            <a href="portfolio.html" class="hover"><o>Portfolio</o></a>
+          </li>
+          <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
-      <ul class="u-list">
-        <li class="email-display">
-          <a href="mailto:info@devstudio.com" class="link-hover"
-            >info@devstudio.com</a
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" class="hover"
+            ><m>info@devstudio.com</m></a
           >
         </li>
         <li>
-          <a href="tel:+1212-772-4150" class="link-hover">+1 212-772-4150</a>
+          <a href="tel:+1212-772-4150"><t>+1 212-772-4150</t></a>
         </li>
       </ul>
     </header>
+    <div class="line-1">
+      <hr />
+    </div>
     <main>
-      <section>
-        <button type="button">All</button>
-        <button type="button">Web-sites</button>
-        <button type="button">Apps</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
+      <section class="grid-buttons">
+        <button type="button" class="button1">All</button>
+        <button type="button" class="button2">Web-sites</button>
+        <button type="button" class="button3">Apps</button>
+        <button type="button" class="button4">Design</button>
+        <button type="button" class="button5">Marketing</button>
       </section>
-      <section>
-        <ul class="grid-box-port">
+      <section class="section-pic">
+        <ul class="grid-pictures font-style-3">
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio1.jpg"
                 alt="Technoduck"
                 width="370"
                 height="294"
               />
-              <figcaption>Technoduck<br />Web-site</figcaption>
+              <figcaption class="font-style-2">
+                Technoduck
+                <div class="font-styl-3">Web-site</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio2.jpg"
                 alt="Poster New Orlean vs Golden Star"
                 width="370"
                 height="294"
               />
-              <figcaption>
-                Poster New Orlean vs Golden Star<br />Design
+              <figcaption class="font-style-2">
+                Poster New Orlean vs Golden Star
+                <div class="font-styl-3">Design</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio3.jpg"
                 alt="Seafood Restaurant"
                 width="370"
                 height="294"
               />
-              <figcaption>Seafood Restaurant<br />Apps</figcaption>
+              <figcaption class="font-style-2">
+                Seafood Restaurant
+                <div>Apps</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio4.jpg"
                 alt="Project Prime"
                 width="370"
                 height="294"
               />
-              <figcaption>Project Prime<br />Marketing</figcaption>
+              <figcaption class="font-style-2">
+                Project Prime
+                <div class="font-styl-3">Marketing</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio5.jpg"
                 alt="Project Boxes"
                 width="370"
                 height="294"
               />
-              <figcaption>Project Boxes<br />Apps</figcaption>
+              <figcaption class="font-style-2">
+                Project Boxes
+                <div class="font-styl-3">Apps</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294"
               />
-              <figcaption>Inspiration has no Borders<br />Web-site</figcaption>
+              <figcaption class="font-style-2">
+                Inspiration has no Borders
+                <div class="font-styl-3">Web-site</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio7.jpg"
                 alt="Limited Edition"
                 width="370"
                 height="294"
               />
-              <figcaption>Limited Edition<br />Design</figcaption>
+              <figcaption class="font-style-2">
+                Limited Edition
+                <div>Design</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio8.jpg"
                 alt="Project LAB"
                 width="370"
                 height="294"
               />
-              <figcaption>Project LAB<br />Marketing</figcaption>
+              <figcaption class="font-style-2">
+                Project LAB
+                <div>Marketing</div>
+              </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="border">
               <img
                 src="images/portfolio9.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
               />
-              <figcaption>Growing Business<br />Apps</figcaption>
+              <figcaption class="font-style-2">
+                Growing Business
+                <div>Apps</div>
+              </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="https://grzegorzkwiatkowski.github.io/goit-markup-hw-01/"
-        >WebStudio</a
-      >
+    <footer class="address-style">
+      <ul>
+        <li>
+          <a href="#"><l>WebStudio</l></a>
+        </li>
+      </ul>
       <address>
-        <ul>
-          <li>695 Park Ave, New York, NY 10065, United States</li>
+        <ul class="a-style">
+          <li>
+            695 Park Ave, New York, NY 10065,<br />
+            United States
+          </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
