--- a/portfolio.html
+++ b/portfolio.html
@@ -23,24 +23,26 @@
     <header class="nav-block nav-style">
       <nav>
         <ul>
-          <li>
-            <a href="index.html"><l>WebStudio</l></a>
+          <li class="logo">
+            <a href="index.html">WebStudio</a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
-          <li>
-            <a href="portfolio.html" class="hover"><o>Portfolio</o></a>
+          <li class="padding-01">
+            <a href="portfolio.html" class="hover">Portfolio</a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
       <ul>
-        <li>
+        <li class="padding-02">
           <a href="mailto:info@devstudio.com" class="hover"
-            ><m>info@devstudio.com</m></a
+            >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+1212-772-4150"><t>+1 212-772-4150</t></a>
+          <a href="tel:+1212-772-4150"
+            ><span class="font-color">+1 212-772-4150</span></a
+          >
         </li>
       </ul>
     </header>
@@ -188,8 +190,8 @@
     </main>
     <footer class="address-style">
       <ul>
-        <li>
-          <a href="#"><l>WebStudio</l></a>
+        <li class="logo">
+          <a href="#">WebStudio</a>
         </li>
       </ul>
       <address>
