--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
             <a href="#">WebStudio</a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
-          <li class="padding-01">
+          <li class="padding-portfolio">
             <a href="portfolio.html" class="hover">Portfolio</a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
       <ul>
-        <li class="padding-02">
-          <a href="mailto:info@devstudio.com" class="hover"
-            >info@devstudio.com</a
+        <li class="padding-mail">
+          <a href="mailto:info@devstudio.com"
+            ><span class="font-color hover">info@devstudio.com</span></a
           >
         </li>
         <li>
           <a href="tel:+1212-772-4150"
-            ><span class="font-color">+1 212-772-4150</span></a
+            ><span class="font-color hover">+1 212-772-4150</span></a
           >
         </li>
       </ul>
     </header>
     <main>
-      <section class="section-1">
+      <section class="head-section-style">
         <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
-        <button class="bt">Request our service</button>
+        <button class="button-style">Request our service</button>
       </section>
-      <section>
+      <section class="info-section-style">
         <ul class="grid-box">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
@@ -77,9 +77,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="about-us-style">
         <h2>What we do</h2>
-        <div class="grid-box-v2">
+        <div class="grid-box-about-us">
           <img
             src="images/gr1.jpg"
             alt="working place1"
@@ -100,7 +100,7 @@
           />
         </div>
       </section>
-      <section class="section-2 img-size">
+      <section class="about-us-style section-background img-size">
         <h2>Our Team</h2>
         <div class="grid-team font-style-3">
           <figure class="white-box">
@@ -134,23 +134,25 @@
         </div>
       </section>
     </main>
-    <footer class="address-style">
+    <footer class="footer-background footer-style">
       <ul>
         <li class="logo">
           <a href="#">WebStudio</a>
         </li>
       </ul>
-      <address>
-        <ul class="a-style">
+      <address class="address-padding">
+        <ul class="address-style">
           <li>
             695 Park Ave, New York, NY 10065,<br />
             United States
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="hover"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+            <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
