--- a/portfolio.html
+++ b/portfolio.html
@@ -21,159 +21,177 @@
             <a href="index.html">WebStudio</a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
-          <li class="padding-01">
+          <li class="padding-portfolio">
             <a href="portfolio.html" class="hover">Portfolio</a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
       </nav>
       <ul>
-        <li class="padding-02">
-          <a href="mailto:info@devstudio.com" class="hover"
-            >info@devstudio.com</a
+        <li class="padding-mail">
+          <a href="mailto:info@devstudio.com"
+            ><span class="font-color hover">info@devstudio.com</span></a
           >
         </li>
         <li>
           <a href="tel:+1212-772-4150"
-            ><span class="font-color">+1 212-772-4150</span></a
+            ><span class="font-color hover">+1 212-772-4150</span></a
           >
         </li>
       </ul>
     </header>
-    <div class="line-1">
+    <div class="line">
       <hr />
     </div>
     <main>
-      <section class="grid-buttons">
-        <button type="button" class="button1">All</button>
-        <button type="button" class="button2">Web-sites</button>
-        <button type="button" class="button3">Apps</button>
-        <button type="button" class="button4">Design</button>
-        <button type="button" class="button5">Marketing</button>
-      </section>
-      <section class="section-pic">
-        <ul class="grid-pictures font-style-3">
+      <section class="nav">
+        <ul class="grid-buttons buttons-style">
           <li>
-            <figure class="border">
+            <button type="button" class="all-button button-hover">All</button>
+          </li>
+          <li>
+            <button type="button" class="web-sites-button button-hover">
+              Web-sites
+            </button>
+          </li>
+          <li>
+            <button type="button" class="apps-button button-hover">Apps</button>
+          </li>
+          <li>
+            <button type="button" class="design-button button-hover">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="marketing-button button-hover">
+              Marketing
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="img-margin">
+        <ul class="grid-pictures second-line-style">
+          <li>
+            <figure class="img-border">
               <img
                 src="images/portfolio1.jpg"
                 alt="Technoduck"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Technoduck
-                <div class="font-styl-3">Web-site</div>
+                <div>Web-site</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio2.jpg"
                 alt="Poster New Orlean vs Golden Star"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Poster New Orlean vs Golden Star
-                <div class="font-styl-3">Design</div>
+                <div>Design</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio3.jpg"
                 alt="Seafood Restaurant"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Seafood Restaurant
                 <div>Apps</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio4.jpg"
                 alt="Project Prime"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Project Prime
-                <div class="font-styl-3">Marketing</div>
+                <div>Marketing</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio5.jpg"
                 alt="Project Boxes"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Project Boxes
-                <div class="font-styl-3">Apps</div>
+                <div>Apps</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Inspiration has no Borders
-                <div class="font-styl-3">Web-site</div>
+                <div>Web-site</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio7.jpg"
                 alt="Limited Edition"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Limited Edition
                 <div>Design</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio8.jpg"
                 alt="Project LAB"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Project LAB
                 <div>Marketing</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="border">
+            <figure class="img-border">
               <img
                 src="images/portfolio9.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
               />
-              <figcaption class="font-style-2">
+              <figcaption class="figcaption-padding">
                 Growing Business
                 <div>Apps</div>
               </figcaption>
@@ -182,23 +200,25 @@
         </ul>
       </section>
     </main>
-    <footer class="address-style">
+    <footer class="footer-background footer-style">
       <ul>
         <li class="logo">
           <a href="#">WebStudio</a>
         </li>
       </ul>
-      <address>
-        <ul class="a-style">
+      <address class="address-padding">
+        <ul class="address-style">
           <li>
             695 Park Ave, New York, NY 10065,<br />
             United States
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="hover"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+            <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
