--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-02</title>
+    <title>goit-markup-hw-03</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="css/styles.css" rel="stylesheet " />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -104,28 +111,28 @@
         <h2>Our Team</h2>
         <div class="grid-team font-style-3">
           <figure class="white-box">
-            <img src="images/Christopher_Walker.jpg" alt="Christopher Walker" />
+            <img src="images/christopher_walker.jpg" alt="Christopher Walker" />
             <figcaption class="font-style-1">
               Christopher Walker
               <div>Product Designer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img src="images/Kylie_Evans.jpg" alt="Kylie Evans" />
+            <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
             <figcaption class="font-style-1">
               Kylie Evans
               <div>Frontend Developer</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img src="images/Ryan_Harris.jpg" alt="Ryan Harris" />
+            <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
             <figcaption class="font-style-1">
               Ryan Harris
               <div>Marketing</div>
             </figcaption>
           </figure>
           <figure class="white-box">
-            <img src="images/Tyler_Moore.jpg" alt="Tyler Moore" />
+            <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
             <figcaption class="font-style-1">
               Tyler Moore
               <div>UI Designer</div>
