--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     />
   </head>
   <body>
-    <header class="nav-block nav-style">
+    <header class="nav-block nav-style container">
       <nav>
         <ul>
           <li class="logo">
@@ -35,12 +35,12 @@
         </ul>
       </nav>
       <ul>
-        <li class="padding-mail">
+        <li>
           <a href="mailto:info@devstudio.com"
             ><span class="font-color hover">info@devstudio.com</span></a
           >
         </li>
-        <li>
+        <li class="padding-tel">
           <a href="tel:+1212-772-4150"
             ><span class="font-color hover">+1 212-772-4150</span></a
           >
@@ -51,8 +51,8 @@
       <hr />
     </div>
     <main>
-      <section class="nav">
-        <ul class="grid-buttons buttons-style">
+      <section class="container-portfolio">
+        <ul class="buttons-style">
           <li>
             <button type="button" class="all-button button-hover">All</button>
           </li>
@@ -77,7 +77,7 @@
         </ul>
       </section>
       <section class="img-margin">
-        <ul class="grid-pictures second-line-style">
+        <ul class="second-line-style container-portfolio2 why">
           <li>
             <figure class="img-border">
               <img
